@@ -25,51 +25,77 @@ package io.jenkins.plugins.view.calendar.service;
 
 import hudson.matrix.MatrixBuild;
 import hudson.matrix.MatrixProject;
-import hudson.model.*;
+import hudson.model.AbstractProject;
+import hudson.model.FreeStyleBuild;
+import hudson.model.FreeStyleProject;
+import hudson.model.ItemGroup;
+import hudson.model.Job;
+import hudson.model.Result;
+import hudson.model.Run;
+import hudson.model.TopLevelItem;
 import hudson.util.RunList;
 import io.jenkins.plugins.view.calendar.CalendarView.CalendarViewEventsType;
-import io.jenkins.plugins.view.calendar.event.*;
+import io.jenkins.plugins.view.calendar.event.CalendarEvent;
+import io.jenkins.plugins.view.calendar.event.CalendarEventState;
+import io.jenkins.plugins.view.calendar.event.ScheduledCalendarEvent;
+import io.jenkins.plugins.view.calendar.event.StartedCalendarEvent;
 import io.jenkins.plugins.view.calendar.time.Moment;
 import io.jenkins.plugins.view.calendar.util.PluginUtil;
 import jenkins.model.Jenkins;
-
-import org.junit.AfterClass;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import org.junit.experimental.runners.Enclosed;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Nested;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
 
-import java.io.IOException;
 import java.text.ParseException;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Calendar;
+import java.util.Collections;
+import java.util.List;
+import java.util.Locale;
+import java.util.TimeZone;
 
-import static io.jenkins.plugins.view.calendar.test.CalendarUtil.*;
+import static io.jenkins.plugins.view.calendar.test.CalendarUtil.cal;
+import static io.jenkins.plugins.view.calendar.test.CalendarUtil.hours;
+import static io.jenkins.plugins.view.calendar.test.CalendarUtil.minutes;
+import static io.jenkins.plugins.view.calendar.test.CalendarUtil.mom;
 import static io.jenkins.plugins.view.calendar.test.TestUtil.*;
 import static io.jenkins.plugins.view.calendar.time.MomentRange.range;
 import static java.util.Arrays.asList;
-import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.assertThat;
-import static org.mockito.Mockito.*;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.containsInAnyOrder;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.notNullValue;
+import static org.hamcrest.Matchers.nullValue;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.withSettings;
 
-@RunWith(Enclosed.class)
-public class CalendarEventServiceTest {
+class CalendarEventServiceTest {
 
     private static TimeZone defaultTimeZone;
-    private CalendarEventService calendarEventService;
+    private static Locale defaultLocale;
 
-    @BeforeClass
-    public static void beforeClass() {
+    @BeforeAll
+    static void beforeClass() {
         CalendarEventServiceTest.defaultTimeZone = TimeZone.getDefault();
         TimeZone.setDefault(TimeZone.getTimeZone("CET"));
+
+        CalendarEventServiceTest.defaultLocale = Locale.getDefault();
+        Locale.setDefault(Locale.ENGLISH);
+
         PluginUtil.setJenkins(mock(Jenkins.class));
     }
 
-    @AfterClass
-    public static void afterClass() {
+    @AfterAll
+    static void afterClass() {
         TimeZone.setDefault(CalendarEventServiceTest.defaultTimeZone);
+        Locale.setDefault(CalendarEventServiceTest.defaultLocale);
     }
-    
+
     private static CalendarEventService getCalendarEventService() {
         final Moment now = new Moment();
         return new CalendarEventService(now, new CronJobService(now));
@@ -80,46 +106,47 @@ public class CalendarEventServiceTest {
         return new CalendarEventService(now, new CronJobService(now));
     }
 
-    public static class GetCalendarEventsTestCases {
+    @Nested
+    class GetCalendarEventsTestCases {
         @Test
-        public void testCase1() throws ParseException {
+        void testCase1() throws ParseException {
             Calendar now = cal("2018-01-01 23:50:00 CET");
             Calendar start = cal("2018-01-02 00:00:00 CET");
             Calendar end = cal("2018-01-03 00:00:00 CET");
 
             List<FreeStyleProject> projects = asList(
-                // Finished builds
-                mockFinishedFreeStyleProject("#1a", "2018-01-01 23:45:00 CET", minutes(2)),
-                mockFinishedFreeStyleProject("#1b", "2018-01-01 23:46:00 CET", minutes(4)),
+                    // Finished builds
+                    mockFinishedFreeStyleProject("#1a", "2018-01-01 23:45:00 CET", minutes(2)),
+                    mockFinishedFreeStyleProject("#1b", "2018-01-01 23:46:00 CET", minutes(4)),
 
-                // Running builds that started before the selection range
-                // but are not estimated to end within the selection range
-                mockRunningFreeStyleProject("#2", "2018-01-01 23:47:00 CET", minutes(5)),
-                mockRunningFreeStyleProject("#3", "2018-01-01 23:48:00 CET", minutes(12)),
-                mockRunningFreeStyleProject("#5", "2018-01-01 23:50:00 CET", minutes(6)),
+                    // Running builds that started before the selection range
+                    // but are not estimated to end within the selection range
+                    mockRunningFreeStyleProject("#2", "2018-01-01 23:47:00 CET", minutes(5)),
+                    mockRunningFreeStyleProject("#3", "2018-01-01 23:48:00 CET", minutes(12)),
+                    mockRunningFreeStyleProject("#5", "2018-01-01 23:50:00 CET", minutes(6)),
 
-                // Running builds estimated to end in the selection range
-                mockRunningFreeStyleProject("#4", "2018-01-01 23:48:00 CET", minutes(15)),
-                mockRunningFreeStyleProject("#6", "2018-01-01 23:50:00 CET", minutes(11)),
+                    // Running builds estimated to end in the selection range
+                    mockRunningFreeStyleProject("#4", "2018-01-01 23:48:00 CET", minutes(15)),
+                    mockRunningFreeStyleProject("#6", "2018-01-01 23:50:00 CET", minutes(11)),
 
-                // Scheduled builds that start before the selection range
-                // but are not estimated to end within the selection range
-                mockScheduledFreeStyleProject("#7", "51 23 1 1 *", minutes(5)),
-                mockScheduledFreeStyleProject("#8", "52 23 1 1 *", minutes(8)),
+                    // Scheduled builds that start before the selection range
+                    // but are not estimated to end within the selection range
+                    mockScheduledFreeStyleProject("#7", "51 23 1 1 *", minutes(5)),
+                    mockScheduledFreeStyleProject("#8", "52 23 1 1 *", minutes(8)),
 
-                // Scheduled builds that start before the selection range
-                // but are estimated to end in the selection range
-                mockScheduledFreeStyleProject("#9a", "51 23 1 1 *", minutes(15)),
-                mockScheduledFreeStyleProject("#9b", "59 23 1 1 *", minutes(8)),
+                    // Scheduled builds that start before the selection range
+                    // but are estimated to end in the selection range
+                    mockScheduledFreeStyleProject("#9a", "51 23 1 1 *", minutes(15)),
+                    mockScheduledFreeStyleProject("#9b", "59 23 1 1 *", minutes(8)),
 
-                // Scheduled builds that start within the selection range
-                mockScheduledFreeStyleProject("#10", "0 0 2 1 *", minutes(8)),
-                mockScheduledFreeStyleProject("#11", "5 0 2 1 *", minutes(8)),
-                mockScheduledFreeStyleProject("#12", "50 23 2 1 *", minutes(20)),
+                    // Scheduled builds that start within the selection range
+                    mockScheduledFreeStyleProject("#10", "0 0 2 1 *", minutes(8)),
+                    mockScheduledFreeStyleProject("#11", "5 0 2 1 *", minutes(8)),
+                    mockScheduledFreeStyleProject("#12", "50 23 2 1 *", minutes(20)),
 
-                // Scheduled builds that start after the selection range
-                mockScheduledFreeStyleProject("#13", "0 0 3 1 *", minutes(10)),
-                mockScheduledFreeStyleProject("#14", "5 0 3 1 *", minutes(12))
+                    // Scheduled builds that start after the selection range
+                    mockScheduledFreeStyleProject("#13", "0 0 3 1 *", minutes(10)),
+                    mockScheduledFreeStyleProject("#14", "5 0 3 1 *", minutes(12))
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.ALL);
@@ -129,31 +156,31 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testCase2() throws ParseException {
+        void testCase2() throws ParseException {
             Calendar now = cal("2018-01-02 00:00:00 CET");
             Calendar start = cal("2018-01-02 00:00:00 CET");
             Calendar end = cal("2018-01-03 00:00:00 CET");
 
             List<FreeStyleProject> projects = asList(
-                // Finished builds
-                mockFinishedFreeStyleProject("#1", "2018-01-01 23:50:00 CET", minutes(2)),
-                mockFinishedFreeStyleProject("#2", "2018-01-01 23:52:00 CET", minutes(8)),
+                    // Finished builds
+                    mockFinishedFreeStyleProject("#1", "2018-01-01 23:50:00 CET", minutes(2)),
+                    mockFinishedFreeStyleProject("#2", "2018-01-01 23:52:00 CET", minutes(8)),
 
-                // Running builds that started before the selection range
-                // but are not estimated to end within the selection range
-                mockRunningFreeStyleProject("#3", "2018-01-01 23:54:00 CET", minutes(6)),
+                    // Running builds that started before the selection range
+                    // but are not estimated to end within the selection range
+                    mockRunningFreeStyleProject("#3", "2018-01-01 23:54:00 CET", minutes(6)),
 
-                // Running builds estimated to end in the selection range
-                mockRunningFreeStyleProject("#4", "2018-01-01 23:56:00 CET", minutes(10)),
-                mockRunningFreeStyleProject("#5", "2018-01-02 00:00:00 CET", minutes(5)),
+                    // Running builds estimated to end in the selection range
+                    mockRunningFreeStyleProject("#4", "2018-01-01 23:56:00 CET", minutes(10)),
+                    mockRunningFreeStyleProject("#5", "2018-01-02 00:00:00 CET", minutes(5)),
 
-                // Scheduled builds that start within the selection range
-                mockScheduledFreeStyleProject("#6", "0 12 2 1 *", minutes(5)),
-                mockScheduledFreeStyleProject("#7", "55 23 2 1 *", minutes(8)),
+                    // Scheduled builds that start within the selection range
+                    mockScheduledFreeStyleProject("#6", "0 12 2 1 *", minutes(5)),
+                    mockScheduledFreeStyleProject("#7", "55 23 2 1 *", minutes(8)),
 
-                // Scheduled builds that start after the selection range
-                mockScheduledFreeStyleProject("#8", "0 0 3 1 *", minutes(10)),
-                mockScheduledFreeStyleProject("#9", "5 0 3 1 *", minutes(12))
+                    // Scheduled builds that start after the selection range
+                    mockScheduledFreeStyleProject("#8", "0 0 3 1 *", minutes(10)),
+                    mockScheduledFreeStyleProject("#9", "5 0 3 1 *", minutes(12))
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.ALL);
@@ -163,70 +190,70 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testCase3() throws ParseException {
+        void testCase3() throws ParseException {
             Calendar now = cal("2018-01-02 12:00:00 CET");
             Calendar start = cal("2018-01-02 00:00:00 CET");
             Calendar end = cal("2018-01-03 00:00:00 CET");
 
             List<FreeStyleProject> projects = asList(
-                 // Finished builds that don't start or end in selection range
-                mockFinishedFreeStyleProject("#1", "2018-01-01 23:45:00 CET", minutes(2)),
-                mockFinishedFreeStyleProject("#2", "2018-01-01 23:46:00 CET", minutes(4)),
+                    // Finished builds that don't start or end in selection range
+                    mockFinishedFreeStyleProject("#1", "2018-01-01 23:45:00 CET", minutes(2)),
+                    mockFinishedFreeStyleProject("#2", "2018-01-01 23:46:00 CET", minutes(4)),
 
-                // Running builds started before the selection range
-                mockRunningFreeStyleProject("#6", "2018-01-01 23:48:00 CET", hours(8)),
+                    // Running builds started before the selection range
+                    mockRunningFreeStyleProject("#6", "2018-01-01 23:48:00 CET", hours(8)),
 
-                // Finished builds that start or end in the selection range
-                mockFinishedFreeStyleProject("#3", "2018-01-01 23:50:00 CET", minutes(12)),
-                mockFinishedFreeStyleProject("#4", "2018-01-02 00:00:00 CET", minutes(8)),
-                mockFinishedFreeStyleProject("#5", "2018-01-02 06:00:00 CET", minutes(20)),
+                    // Finished builds that start or end in the selection range
+                    mockFinishedFreeStyleProject("#3", "2018-01-01 23:50:00 CET", minutes(12)),
+                    mockFinishedFreeStyleProject("#4", "2018-01-02 00:00:00 CET", minutes(8)),
+                    mockFinishedFreeStyleProject("#5", "2018-01-02 06:00:00 CET", minutes(20)),
 
-                // Running builds started in the selection range
-                mockRunningFreeStyleProject("#7", "2018-01-02 11:50:00 CET", minutes(20)),
-                mockRunningFreeStyleProject("#8", "2018-01-02 12:00:00 CET", minutes(11)),
+                    // Running builds started in the selection range
+                    mockRunningFreeStyleProject("#7", "2018-01-02 11:50:00 CET", minutes(20)),
+                    mockRunningFreeStyleProject("#8", "2018-01-02 12:00:00 CET", minutes(11)),
 
-                // Scheduled builds that start within the selection range
-                mockScheduledFreeStyleProject("#9", "1 12 2 1 *", minutes(8)),
-                mockScheduledFreeStyleProject("#10", "50 23 2 1 *", minutes(20)),
+                    // Scheduled builds that start within the selection range
+                    mockScheduledFreeStyleProject("#9", "1 12 2 1 *", minutes(8)),
+                    mockScheduledFreeStyleProject("#10", "50 23 2 1 *", minutes(20)),
 
-                // Scheduled builds that start after the selection range
-                mockScheduledFreeStyleProject("#11", "0 0 3 1 *", minutes(10)),
-                mockScheduledFreeStyleProject("#12", "5 0 3 1 *", minutes(12))
+                    // Scheduled builds that start after the selection range
+                    mockScheduledFreeStyleProject("#11", "0 0 3 1 *", minutes(10)),
+                    mockScheduledFreeStyleProject("#12", "5 0 3 1 *", minutes(12))
             );
 
-            List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects , range(start, end), CalendarViewEventsType.ALL);
+            List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.ALL);
 
             assertThat(events, hasSize(8));
             assertThat(titlesOf(events), containsInAnyOrder("#3", "#4", "#5", "#6", "#7", "#8", "#9", "#10"));
         }
 
         @Test
-        public void testCase4() throws ParseException {
+        void testCase4() throws ParseException {
             Calendar now = cal("2018-01-03 00:00:00 CET");
             Calendar start = cal("2018-01-02 00:00:00 CET");
             Calendar end = cal("2018-01-03 00:00:00 CET");
 
             List<FreeStyleProject> projects = asList(
-                // Finished builds that don't start or end in selection range
-                mockFinishedFreeStyleProject("#1", "2018-01-01 23:45:00 CET", minutes(2)),
-                mockFinishedFreeStyleProject("#2", "2018-01-01 23:46:00 CET", minutes(4)),
+                    // Finished builds that don't start or end in selection range
+                    mockFinishedFreeStyleProject("#1", "2018-01-01 23:45:00 CET", minutes(2)),
+                    mockFinishedFreeStyleProject("#2", "2018-01-01 23:46:00 CET", minutes(4)),
 
-                // Running builds started before the selection range
-                mockRunningFreeStyleProject("#6", "2018-01-01 23:48:00 CET", hours(30)),
+                    // Running builds started before the selection range
+                    mockRunningFreeStyleProject("#6", "2018-01-01 23:48:00 CET", hours(30)),
 
-                // Finished builds that start or end in the selection range
-                mockFinishedFreeStyleProject("#3", "2018-01-01 23:50:00 CET", minutes(12)),
-                mockFinishedFreeStyleProject("#4", "2018-01-02 00:00:00 CET", minutes(8)),
-                mockFinishedFreeStyleProject("#5", "2018-01-02 06:00:00 CET", minutes(20)),
+                    // Finished builds that start or end in the selection range
+                    mockFinishedFreeStyleProject("#3", "2018-01-01 23:50:00 CET", minutes(12)),
+                    mockFinishedFreeStyleProject("#4", "2018-01-02 00:00:00 CET", minutes(8)),
+                    mockFinishedFreeStyleProject("#5", "2018-01-02 06:00:00 CET", minutes(20)),
 
-                // Running builds started in the selection range
-                mockRunningFreeStyleProject("#7", "2018-01-02 23:50:00 CET", minutes(20)),
+                    // Running builds started in the selection range
+                    mockRunningFreeStyleProject("#7", "2018-01-02 23:50:00 CET", minutes(20)),
 
-                // Running builds started after the selection range
-                mockRunningFreeStyleProject("#8", "2018-01-03 00:00:00 CET", minutes(11)),
+                    // Running builds started after the selection range
+                    mockRunningFreeStyleProject("#8", "2018-01-03 00:00:00 CET", minutes(11)),
 
-                // Scheduled builds that start after the selection range
-                mockScheduledFreeStyleProject("#9", "1 0 3 1 *", minutes(8))
+                    // Scheduled builds that start after the selection range
+                    mockScheduledFreeStyleProject("#9", "1 0 3 1 *", minutes(8))
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.ALL);
@@ -236,39 +263,39 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testCase5() throws ParseException {
+        void testCase5() throws ParseException {
             Calendar now = cal("2018-01-03 00:10:00 CET");
             Calendar start = cal("2018-01-02 00:00:00 CET");
             Calendar end = cal("2018-01-03 00:00:00 CET");
 
             List<FreeStyleProject> projects = asList(
-                // Finished builds that don't start or end in selection range
-                mockFinishedFreeStyleProject("#1", "2018-01-01 23:45:00 CET", minutes(2)),
-                mockFinishedFreeStyleProject("#2", "2018-01-01 23:46:00 CET", minutes(4)),
+                    // Finished builds that don't start or end in selection range
+                    mockFinishedFreeStyleProject("#1", "2018-01-01 23:45:00 CET", minutes(2)),
+                    mockFinishedFreeStyleProject("#2", "2018-01-01 23:46:00 CET", minutes(4)),
 
-                // Running builds started before the selection range
-                mockRunningFreeStyleProject("#9", "2018-01-01 23:48:00 CET", hours(30)),
+                    // Running builds started before the selection range
+                    mockRunningFreeStyleProject("#9", "2018-01-01 23:48:00 CET", hours(30)),
 
-                // Finished builds that start or end in the selection range
-                mockFinishedFreeStyleProject("#3", "2018-01-01 23:50:00 CET", minutes(12)),
-                mockFinishedFreeStyleProject("#4", "2018-01-02 00:00:00 CET", minutes(8)),
-                mockFinishedFreeStyleProject("#5", "2018-01-02 06:00:00 CET", minutes(2)),
-                mockFinishedFreeStyleProject("#6", "2018-01-02 23:50:00 CET", minutes(20)),
+                    // Finished builds that start or end in the selection range
+                    mockFinishedFreeStyleProject("#3", "2018-01-01 23:50:00 CET", minutes(12)),
+                    mockFinishedFreeStyleProject("#4", "2018-01-02 00:00:00 CET", minutes(8)),
+                    mockFinishedFreeStyleProject("#5", "2018-01-02 06:00:00 CET", minutes(2)),
+                    mockFinishedFreeStyleProject("#6", "2018-01-02 23:50:00 CET", minutes(20)),
 
-                // Finished builds started after the selection range
-                mockFinishedFreeStyleProject("#7", "2018-01-03 00:00:00 CET", minutes(5)),
-                mockFinishedFreeStyleProject("#8", "2018-01-03 00:01:00 CET", minutes(2)),
+                    // Finished builds started after the selection range
+                    mockFinishedFreeStyleProject("#7", "2018-01-03 00:00:00 CET", minutes(5)),
+                    mockFinishedFreeStyleProject("#8", "2018-01-03 00:01:00 CET", minutes(2)),
 
-                // Running builds started in the selection range
-                mockRunningFreeStyleProject("#10", "2018-01-02 23:51:00 CET", minutes(25)),
+                    // Running builds started in the selection range
+                    mockRunningFreeStyleProject("#10", "2018-01-02 23:51:00 CET", minutes(25)),
 
-                // Running builds started after the selection range
-                mockRunningFreeStyleProject("#11a", "2018-01-03 00:00:00 CET", minutes(13)),
-                mockRunningFreeStyleProject("#11b", "2018-01-03 00:02:00 CET", minutes(13)),
-                mockRunningFreeStyleProject("#12", "2018-01-03 00:10:00 CET", minutes(7)),
+                    // Running builds started after the selection range
+                    mockRunningFreeStyleProject("#11a", "2018-01-03 00:00:00 CET", minutes(13)),
+                    mockRunningFreeStyleProject("#11b", "2018-01-03 00:02:00 CET", minutes(13)),
+                    mockRunningFreeStyleProject("#12", "2018-01-03 00:10:00 CET", minutes(7)),
 
-                // Scheduled builds that start after the selection range
-                mockScheduledFreeStyleProject("#13", "10 0 3 1 *", minutes(8))
+                    // Scheduled builds that start after the selection range
+                    mockScheduledFreeStyleProject("#13", "10 0 3 1 *", minutes(8))
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.ALL);
@@ -278,16 +305,17 @@ public class CalendarEventServiceTest {
         }
     }
 
-    public static class GetCalendarEventsTestScheduledStart {
+    @Nested
+    class GetCalendarEventsTestScheduledStart {
         @Test
-        public void testOneMinuteBeforeScheduledStart() throws ParseException {
+        void testOneMinuteBeforeScheduledStart() throws ParseException {
             Calendar now = cal("2018-01-04 23:43:00 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-07 00:00:00 CET");
 
             FreeStyleProject project = mockScheduledFreeStyleProject("project", "44 23 * * *", minutes(10));
 
-            List<CalendarEvent> calendarEvents = getCalendarEventService(now).getCalendarEvents(asList(project), range(start, end), CalendarViewEventsType.ALL);
+            List<CalendarEvent> calendarEvents = getCalendarEventService(now).getCalendarEvents(List.of(project), range(start, end), CalendarViewEventsType.ALL);
 
             assertThat(calendarEvents, hasSize(3));
             assertThat(calendarEvents.get(0).getStart(), is(mom("2018-01-04 23:44:00 CET")));
@@ -299,14 +327,14 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testThirtySecondsBeforeScheduledStart() throws ParseException {
+        void testThirtySecondsBeforeScheduledStart() throws ParseException {
             Calendar now = cal("2018-01-04 23:43:30 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-07 00:00:00 CET");
 
             FreeStyleProject project = mockScheduledFreeStyleProject("project", "44 23 * * *", minutes(10));
 
-            List<CalendarEvent> calendarEvents = getCalendarEventService(now).getCalendarEvents(asList(project), range(start, end), CalendarViewEventsType.ALL);
+            List<CalendarEvent> calendarEvents = getCalendarEventService(now).getCalendarEvents(List.of(project), range(start, end), CalendarViewEventsType.ALL);
 
             assertThat(calendarEvents, hasSize(3));
             assertThat(calendarEvents.get(0).getStart(), is(mom("2018-01-04 23:44:00 CET")));
@@ -318,7 +346,7 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testExactSecondOfScheduledStart() throws ParseException {
+        void testExactSecondOfScheduledStart() throws ParseException {
             Calendar now = cal("2018-01-04 23:44:00 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-07 00:00:00 CET");
@@ -340,7 +368,7 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testThirtySecondsAfterScheduledStart() throws ParseException {
+        void testThirtySecondsAfterScheduledStart() throws ParseException {
             Calendar now = cal("2018-01-04 23:44:30 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-07 00:00:00 CET");
@@ -362,7 +390,7 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testOneMinuteAfterScheduledStart() throws ParseException {
+        void testOneMinuteAfterScheduledStart() throws ParseException {
             Calendar now = cal("2018-01-04 23:45:00 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-07 00:00:00 CET");
@@ -383,18 +411,19 @@ public class CalendarEventServiceTest {
         }
     }
 
-    public static class GetCalendarEventsTestStartRange {
+    @Nested
+    class GetCalendarEventsTestStartRange {
         @Test
-        public void testOneMinuteBeforeStartRange() throws ParseException {
+        void testOneMinuteBeforeStartRange() throws ParseException {
             Calendar now = cal("2017-12-31 23:59:00 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-02 00:00:00 CET");
 
             List<FreeStyleProject> projects = asList(
-                mockRunningFreeStyleProject("build","2017-12-31 23:59:00 CET", minutes(10)),
-                mockScheduledFreeStyleProject("project","59 23 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project","0 0 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project","1 0 * * *", minutes(10))
+                    mockRunningFreeStyleProject("build", "2017-12-31 23:59:00 CET", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "59 23 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "0 0 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "1 0 * * *", minutes(10))
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.ALL);
@@ -411,16 +440,16 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testThirtySecondsBeforeStartRange() throws ParseException {
+        void testThirtySecondsBeforeStartRange() throws ParseException {
             Calendar now = cal("2017-12-31 23:59:30 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-02 00:00:00 CET");
 
             List<FreeStyleProject> projects = asList(
-                mockRunningFreeStyleProject("build","2017-12-31 23:59:00 CET", minutes(3)),
-                mockScheduledFreeStyleProject("project","59 23 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project","0 0 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project","1 0 * * *", minutes(10))
+                    mockRunningFreeStyleProject("build", "2017-12-31 23:59:00 CET", minutes(3)),
+                    mockScheduledFreeStyleProject("project", "59 23 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "0 0 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "1 0 * * *", minutes(10))
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.ALL);
@@ -437,17 +466,17 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testExactSecondOfStartRange() throws ParseException {
+        void testExactSecondOfStartRange() throws ParseException {
             Calendar now = cal("2018-01-01 00:00:00 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-02 00:00:00 CET");
 
             List<FreeStyleProject> projects = asList(
-                mockRunningFreeStyleProject("build","2017-12-31 23:59:00 CET", minutes(3)),
-                mockRunningFreeStyleProject("build","2018-01-01 00:00:00 CET", minutes(3)),
-                mockScheduledFreeStyleProject("project","59 23 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project","0 0 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project","1 0 * * *", minutes(10))
+                    mockRunningFreeStyleProject("build", "2017-12-31 23:59:00 CET", minutes(3)),
+                    mockRunningFreeStyleProject("build", "2018-01-01 00:00:00 CET", minutes(3)),
+                    mockScheduledFreeStyleProject("project", "59 23 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "0 0 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "1 0 * * *", minutes(10))
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.ALL);
@@ -464,17 +493,17 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testThirtySecondsAfterStartRange() throws ParseException {
+        void testThirtySecondsAfterStartRange() throws ParseException {
             Calendar now = cal("2018-01-01 00:00:30 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-02 00:00:00 CET");
 
             List<FreeStyleProject> projects = asList(
-                mockRunningFreeStyleProject("build","2017-12-31 23:59:00 CET", minutes(3)),
-                mockRunningFreeStyleProject("build","2018-01-01 00:00:00 CET", minutes(3)),
-                mockScheduledFreeStyleProject("project","59 23 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project","0 0 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project","1 0 * * *", minutes(10))
+                    mockRunningFreeStyleProject("build", "2017-12-31 23:59:00 CET", minutes(3)),
+                    mockRunningFreeStyleProject("build", "2018-01-01 00:00:00 CET", minutes(3)),
+                    mockScheduledFreeStyleProject("project", "59 23 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "0 0 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "1 0 * * *", minutes(10))
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.ALL);
@@ -491,18 +520,18 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testOneMinuteAfterStartRange() throws ParseException {
+        void testOneMinuteAfterStartRange() throws ParseException {
             Calendar now = cal("2018-01-01 00:01:00 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-02 00:00:00 CET");
 
             List<FreeStyleProject> projects = asList(
-                mockRunningFreeStyleProject("build","2017-12-31 23:59:00 CET", minutes(3)),
-                mockRunningFreeStyleProject("build","2018-01-01 00:00:00 CET", minutes(3)),
-                mockRunningFreeStyleProject("build","2018-01-01 00:01:00 CET", minutes(3)),
-                mockScheduledFreeStyleProject("project","59 23 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project","0 0 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project","1 0 * * *", minutes(10))
+                    mockRunningFreeStyleProject("build", "2017-12-31 23:59:00 CET", minutes(3)),
+                    mockRunningFreeStyleProject("build", "2018-01-01 00:00:00 CET", minutes(3)),
+                    mockRunningFreeStyleProject("build", "2018-01-01 00:01:00 CET", minutes(3)),
+                    mockScheduledFreeStyleProject("project", "59 23 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "0 0 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "1 0 * * *", minutes(10))
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.ALL);
@@ -519,9 +548,10 @@ public class CalendarEventServiceTest {
         }
     }
 
-    public static class GetCalendarEventsTestEndRange {
+    @Nested
+    class GetCalendarEventsTestEndRange {
         @Test
-        public void testOneMinuteBeforeEndRange() throws ParseException {
+        void testOneMinuteBeforeEndRange() throws ParseException {
             Calendar now = cal("2018-01-01 23:59:00 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-02 00:00:00 CET");
@@ -541,16 +571,16 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testThirtySecondsBeforeEndRange() throws ParseException {
+        void testThirtySecondsBeforeEndRange() throws ParseException {
             Calendar now = cal("2018-01-01 23:59:30 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-02 00:00:00 CET");
 
             List<FreeStyleProject> projects = asList(
-                mockRunningFreeStyleProject("build", "2018-01-01 23:59:00 CET", minutes(10)),
-                mockScheduledFreeStyleProject("project", "59 23 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project", "0 0 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project", "1 0 * * *", minutes(10))
+                    mockRunningFreeStyleProject("build", "2018-01-01 23:59:00 CET", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "59 23 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "0 0 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "1 0 * * *", minutes(10))
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.ALL);
@@ -561,17 +591,17 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testExactSecondOfEndRange() throws ParseException {
+        void testExactSecondOfEndRange() throws ParseException {
             Calendar now = cal("2018-01-02 00:00:00 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-02 00:00:00 CET");
 
             List<FreeStyleProject> projects = asList(
-                mockRunningFreeStyleProject("build", "2018-01-01 23:59:00 CET", minutes(10)),
-                mockRunningFreeStyleProject("build", "2018-01-02 00:00:00 CET", minutes(10)),
-                mockScheduledFreeStyleProject("project", "59 23 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project", "0 0 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project", "1 0 * * *", minutes(10))
+                    mockRunningFreeStyleProject("build", "2018-01-01 23:59:00 CET", minutes(10)),
+                    mockRunningFreeStyleProject("build", "2018-01-02 00:00:00 CET", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "59 23 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "0 0 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "1 0 * * *", minutes(10))
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.ALL);
@@ -582,17 +612,17 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testThirtySecondsAfterEndRange() throws ParseException {
+        void testThirtySecondsAfterEndRange() throws ParseException {
             Calendar now = cal("2018-01-02 00:00:30 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-02 00:00:00 CET");
 
             List<FreeStyleProject> projects = asList(
-                mockRunningFreeStyleProject("build", "2018-01-01 23:59:00 CET", minutes(10)),
-                mockRunningFreeStyleProject("build", "2018-01-02 00:00:00 CET", minutes(10)),
-                mockScheduledFreeStyleProject("project", "59 23 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project", "0 0 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project", "1 0 * * *", minutes(10))
+                    mockRunningFreeStyleProject("build", "2018-01-01 23:59:00 CET", minutes(10)),
+                    mockRunningFreeStyleProject("build", "2018-01-02 00:00:00 CET", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "59 23 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "0 0 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "1 0 * * *", minutes(10))
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.ALL);
@@ -603,18 +633,18 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testOneMinuteAfterEndRange() throws ParseException {
+        void testOneMinuteAfterEndRange() throws ParseException {
             Calendar now = cal("2018-01-02 00:01:00 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-02 00:00:00 CET");
 
             List<FreeStyleProject> projects = asList(
-                mockRunningFreeStyleProject("build", "2018-01-01 23:59:00 CET", minutes(10)),
-                mockRunningFreeStyleProject("build", "2018-01-02 00:00:00 CET", minutes(10)),
-                mockRunningFreeStyleProject("build", "2018-01-02 00:01:00 CET", minutes(10)),
-                mockScheduledFreeStyleProject("project", "59 23 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project", "0 0 * * *", minutes(10)),
-                mockScheduledFreeStyleProject("project", "1 0 * * *", minutes(10))
+                    mockRunningFreeStyleProject("build", "2018-01-01 23:59:00 CET", minutes(10)),
+                    mockRunningFreeStyleProject("build", "2018-01-02 00:00:00 CET", minutes(10)),
+                    mockRunningFreeStyleProject("build", "2018-01-02 00:01:00 CET", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "59 23 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "0 0 * * *", minutes(10)),
+                    mockScheduledFreeStyleProject("project", "1 0 * * *", minutes(10))
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.ALL);
@@ -625,41 +655,42 @@ public class CalendarEventServiceTest {
         }
     }
 
-    public static class GetScheduledEventsForwardTests {
+    @Nested
+    class GetScheduledEventsForwardTests {
         @Test
-        public void testNoJobs() throws ParseException {
+        void testNoJobs() {
             List<ScheduledCalendarEvent> events = getCalendarEventService().getScheduledEventsForward(
-                new ArrayList<Job>(),null, null, CalendarViewEventsType.ALL);
+                    new ArrayList<>(), null, null, CalendarViewEventsType.ALL);
             assertThat(events, hasSize(0));
         }
 
         @Test
-        public void testNoTriggers() throws ParseException {
+        void testNoTriggers() {
             FreeStyleProject project = mockFreeStyleProject();
 
             List<ScheduledCalendarEvent> events = getCalendarEventService().getScheduledEventsForward(
-                Arrays.asList(project), null, null, CalendarViewEventsType.ALL);
+                    Collections.singletonList(project), null, null, CalendarViewEventsType.ALL);
             assertThat(events, hasSize(0));
         }
 
         @Test
-        public void testNoCronTabs() throws ParseException {
+        void testNoCronTabs() {
             FreeStyleProject project = mockScheduledFreeStyleProject("project", "", minutes(0));
 
             List<ScheduledCalendarEvent> events = getCalendarEventService().getScheduledEventsForward(
-                Arrays.asList(project), null, null, CalendarViewEventsType.ALL);
+                    List.of(project), null, null, CalendarViewEventsType.ALL);
             assertThat(events, hasSize(0));
         }
 
         @Test
-        public void testWithBuilds() throws ParseException {
+        void testWithBuilds() throws ParseException {
             Calendar start = cal("2018-01-01 00:00:00 UTC");
             Calendar end = cal("2018-01-05 00:00:00 UTC");
 
             FreeStyleProject project = mockScheduledFreeStyleProject("project", "0 21 * * *", minutes(10));
 
             List<ScheduledCalendarEvent> events = getCalendarEventService().getScheduledEventsForward(
-                asList(project), range(start, end), range(start, end), CalendarViewEventsType.ALL);
+                    List.of(project), range(start, end), range(start, end), CalendarViewEventsType.ALL);
 
             assertThat(events, hasSize(4));
             assertThat(events.get(0).getStart(), is(mom("2018-01-01 21:00:00 CET")));
@@ -669,14 +700,14 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testHash() throws ParseException {
+        void testHash() throws ParseException {
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-05 00:00:00 CET");
 
             FreeStyleProject project = mockScheduledFreeStyleProject("HashThisName", "H 21 * * *", minutes(10));
 
             List<ScheduledCalendarEvent> events = getCalendarEventService().getScheduledEventsForward(
-                asList(project), range(start, end), range(start, end), CalendarViewEventsType.ALL);
+                    List.of(project), range(start, end), range(start, end), CalendarViewEventsType.ALL);
 
             assertThat(events, hasSize(4));
             assertThat(events.get(0).getStart(), is(mom("2018-01-01 21:48:00 CET")));
@@ -686,41 +717,42 @@ public class CalendarEventServiceTest {
         }
     }
 
-    public static class GetScheduledEventsBackwardTests {
+    @Nested
+    class GetScheduledEventsBackwardTests {
         @Test
-        public void testNoJobs() throws ParseException {
+        void testNoJobs() {
             List<ScheduledCalendarEvent> events = getCalendarEventService().getScheduledEventsBackward(
-                new ArrayList<Job>(),null, null, CalendarViewEventsType.ALL);
+                    new ArrayList<>(), null, null, CalendarViewEventsType.ALL);
             assertThat(events, hasSize(0));
         }
 
         @Test
-        public void testNoTriggers() throws ParseException {
+        void testNoTriggers() {
             FreeStyleProject project = mockFreeStyleProject();
 
             List<ScheduledCalendarEvent> events = getCalendarEventService().getScheduledEventsBackward(
-                Arrays.asList(project), null, null, CalendarViewEventsType.ALL);
+                    Collections.singletonList(project), null, null, CalendarViewEventsType.ALL);
             assertThat(events, hasSize(0));
         }
 
         @Test
-        public void testNoCronTabs() throws ParseException {
+        void testNoCronTabs() {
             FreeStyleProject project = mockScheduledFreeStyleProject("project", "", minutes(0));
 
             List<ScheduledCalendarEvent> events = getCalendarEventService().getScheduledEventsBackward(
-                Arrays.asList(project), null, null, CalendarViewEventsType.ALL);
+                    List.of(project), null, null, CalendarViewEventsType.ALL);
             assertThat(events, hasSize(0));
         }
 
         @Test
-        public void testWithBuilds() throws ParseException {
+        void testWithBuilds() throws ParseException {
             Calendar start = cal("2018-01-01 00:00:00 UTC");
             Calendar end = cal("2018-01-05 00:00:00 UTC");
 
             FreeStyleProject project = mockScheduledFreeStyleProject("project", "0 21 * * *", minutes(10));
 
             List<ScheduledCalendarEvent> events = getCalendarEventService().getScheduledEventsBackward(
-                asList(project), range(start, end), range(start, end), CalendarViewEventsType.ALL);
+                    List.of(project), range(start, end), range(start, end), CalendarViewEventsType.ALL);
 
             assertThat(events, hasSize(4));
             assertThat(events.get(0).getStart(), is(mom("2018-01-04 21:00:00 CET")));
@@ -730,14 +762,14 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testHash() throws ParseException {
+        void testHash() throws ParseException {
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-05 00:00:00 CET");
 
             FreeStyleProject project = mockScheduledFreeStyleProject("HashThisName", "H 21 * * *", minutes(10));
 
             List<ScheduledCalendarEvent> events = getCalendarEventService().getScheduledEventsBackward(
-                    asList(project), range(start, end), range(start, end), CalendarViewEventsType.ALL);
+                    List.of(project), range(start, end), range(start, end), CalendarViewEventsType.ALL);
 
             assertThat(events, hasSize(4));
             assertThat(events.get(0).getStart(), is(mom("2018-01-04 21:48:00 CET")));
@@ -747,29 +779,30 @@ public class CalendarEventServiceTest {
         }
     }
 
-    public static class GetStartedEventsTests {
+    @Nested
+    class GetStartedEventsTests {
         @Test
-        public void testNoJobs() throws ParseException {
+        void testNoJobs() throws ParseException {
             Calendar start = cal("2018-01-01 00:00:00 UTC");
             Calendar end = cal("2018-01-05 00:00:00 UTC");
 
-            List<StartedCalendarEvent> events = getCalendarEventService().getStartedEvents(new ArrayList<Job>(), range(start, end), null, CalendarViewEventsType.ALL);
+            List<StartedCalendarEvent> events = getCalendarEventService().getStartedEvents(new ArrayList<>(), range(start, end), null, CalendarViewEventsType.ALL);
             assertThat(events, hasSize(0));
         }
 
         @Test
-        public void testWithFinishedBuilds() throws ParseException {
+        void testWithFinishedBuilds() throws ParseException {
             Calendar start = cal("2018-01-01 00:00:00 UTC");
             Calendar end = cal("2018-01-05 00:00:00 UTC");
 
             List<FreeStyleProject> projects = asList(
-                mockFinishedFreeStyleProject("build1", "2017-12-31 23:49:59 UTC", minutes(10)),
-                mockFinishedFreeStyleProject("build2", "2017-12-31 23:50:00 UTC", minutes(10)),
-                mockFinishedFreeStyleProject("build3", "2017-12-31 23:59:59 UTC", minutes(10)),
-                mockFinishedFreeStyleProject("build4", "2018-01-01 00:00:00 UTC", minutes(10)),
-                mockFinishedFreeStyleProject("build5", "2018-01-01 00:01:00 UTC", minutes(10)),
-                mockFinishedFreeStyleProject("build6", "2018-01-04 23:59:59 UTC", minutes(10)),
-                mockFinishedFreeStyleProject("build7", "2018-01-05 00:00:00 UTC", minutes(10))
+                    mockFinishedFreeStyleProject("build1", "2017-12-31 23:49:59 UTC", minutes(10)),
+                    mockFinishedFreeStyleProject("build2", "2017-12-31 23:50:00 UTC", minutes(10)),
+                    mockFinishedFreeStyleProject("build3", "2017-12-31 23:59:59 UTC", minutes(10)),
+                    mockFinishedFreeStyleProject("build4", "2018-01-01 00:00:00 UTC", minutes(10)),
+                    mockFinishedFreeStyleProject("build5", "2018-01-01 00:01:00 UTC", minutes(10)),
+                    mockFinishedFreeStyleProject("build6", "2018-01-04 23:59:59 UTC", minutes(10)),
+                    mockFinishedFreeStyleProject("build7", "2018-01-05 00:00:00 UTC", minutes(10))
             );
 
             List<StartedCalendarEvent> events = getCalendarEventService().getStartedEvents(projects, range(start, end), null, CalendarViewEventsType.ALL);
@@ -778,17 +811,17 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testWithRunningBuilds() throws ParseException {
+        void testWithRunningBuilds() throws ParseException {
             Calendar now = cal("2018-01-05 00:00:00 UTC");
             Calendar start = cal("2018-01-01 00:00:00 UTC");
             Calendar end = cal("2018-01-05 00:00:00 UTC");
 
             List<FreeStyleProject> projects = asList(
-                mockRunningFreeStyleProject("build3", "2017-12-31 23:59:59 UTC", minutes(10)),
-                mockRunningFreeStyleProject("build4", "2018-01-01 00:00:00 UTC", minutes(10)),
-                mockRunningFreeStyleProject("build5", "2018-01-01 00:01:00 UTC", minutes(10)),
-                mockRunningFreeStyleProject("build6", "2018-01-04 23:59:59 UTC", minutes(10)),
-                mockRunningFreeStyleProject("build7", "2018-01-05 00:00:00 UTC", minutes(10))
+                    mockRunningFreeStyleProject("build3", "2017-12-31 23:59:59 UTC", minutes(10)),
+                    mockRunningFreeStyleProject("build4", "2018-01-01 00:00:00 UTC", minutes(10)),
+                    mockRunningFreeStyleProject("build5", "2018-01-01 00:01:00 UTC", minutes(10)),
+                    mockRunningFreeStyleProject("build6", "2018-01-04 23:59:59 UTC", minutes(10)),
+                    mockRunningFreeStyleProject("build7", "2018-01-05 00:00:00 UTC", minutes(10))
             );
 
             List<StartedCalendarEvent> events = getCalendarEventService(now).getStartedEvents(projects, range(start, end), null, CalendarViewEventsType.ALL);
@@ -797,7 +830,7 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testWithFinishedAndRunningBuilds() throws ParseException {
+        void testWithFinishedAndRunningBuilds() throws ParseException {
             Calendar now = cal("2018-01-05 00:00:00 UTC");
             Calendar start = cal("2018-01-01 00:00:00 UTC");
             Calendar end = cal("2018-01-05 00:00:00 UTC");
@@ -822,21 +855,22 @@ public class CalendarEventServiceTest {
             assertThat(titlesOf(events), containsInAnyOrder("build3", "build5"));
         }
 
-        @Test(expected = IllegalArgumentException.class)
-        public void testStateNotScheduled() throws ParseException {
-            getCalendarEventService().getStartedEvents(new ArrayList<Job>(), null, CalendarEventState.SCHEDULED, CalendarViewEventsType.ALL);
+        @Test
+        void testStateNotScheduled() {
+            assertThrows(IllegalArgumentException.class, () ->
+                    getCalendarEventService().getStartedEvents(new ArrayList<>(), null, CalendarEventState.SCHEDULED, CalendarViewEventsType.ALL));
         }
 
         @Test
-        public void testThatJobAndBuildMustBeRunning() throws ParseException {
+        void testThatJobAndBuildMustBeRunning() throws ParseException {
             Calendar start = cal("2018-01-01 00:00:00 UTC");
             Calendar end = cal("2018-01-05 00:00:00 UTC");
 
             RunList<FreeStyleBuild> finishedBuild = mockBuilds(
-                mockFinishedFreeStyleBuild("build", "2018-01-01 12:00:00 UTC", minutes(10), Result.SUCCESS)
+                    mockFinishedFreeStyleBuild("build", "2018-01-01 12:00:00 UTC", minutes(10), Result.SUCCESS)
             );
             RunList<FreeStyleBuild> runningBuild = mockBuilds(
-                mockRunningFreeStyleBuild("build", "2018-01-01 12:00:00 UTC", minutes(10))
+                    mockRunningFreeStyleBuild("build", "2018-01-01 12:00:00 UTC", minutes(10))
             );
 
             FreeStyleProject runningProjectWithFinishedBuild = mockFreeStyleProject();
@@ -847,14 +881,15 @@ public class CalendarEventServiceTest {
             when(finishedProjectWithRunningBuild.getBuilds()).thenReturn(runningBuild);
             when(finishedProjectWithRunningBuild.isBuilding()).thenReturn(false);
 
-            assertThat(getCalendarEventService().getRunningEvents(asList(runningProjectWithFinishedBuild), range(start, end), CalendarViewEventsType.ALL), hasSize(0));
-            assertThat(getCalendarEventService().getRunningEvents(asList(finishedProjectWithRunningBuild), range(start, end), CalendarViewEventsType.ALL), hasSize(0));
+            assertThat(getCalendarEventService().getRunningEvents(List.of(runningProjectWithFinishedBuild), range(start, end), CalendarViewEventsType.ALL), hasSize(0));
+            assertThat(getCalendarEventService().getRunningEvents(List.of(finishedProjectWithRunningBuild), range(start, end), CalendarViewEventsType.ALL), hasSize(0));
         }
     }
 
-    public static class GetLastEventsTests {
-       @Test
-        public void testHasNoPastBuilds() {
+    @Nested
+    class GetLastEventsTests {
+        @Test
+        void testHasNoPastBuilds() {
             CalendarEvent event = mock(CalendarEvent.class);
             when(event.getJob()).thenReturn(mockFreeStyleProject());
 
@@ -863,7 +898,7 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testFreeStyleProjectWithLastBuilds() throws IOException, ParseException {
+        void testFreeStyleProjectWithLastBuilds() throws ParseException {
             final FreeStyleBuild build1 = mockFinishedFreeStyleBuild("build1", "2018-01-01 01:00:00 CET", minutes(10), Result.FAILURE);
 
             final FreeStyleBuild build2 = mockFinishedFreeStyleBuild("build2", "2018-01-01 02:00:00 CET", minutes(10), Result.SUCCESS);
@@ -877,7 +912,9 @@ public class CalendarEventServiceTest {
 
             FreeStyleProject project = new FreeStyleProject(mock(ItemGroup.class), "project") {
                 @Override
-                public FreeStyleBuild getLastBuild() { return build4; }
+                public FreeStyleBuild getLastBuild() {
+                    return build4;
+                }
 
                 @Override
                 public List<FreeStyleBuild> getLastBuildsOverThreshold(int numberOfBuilds, Result threshold) {
@@ -886,7 +923,9 @@ public class CalendarEventServiceTest {
                 }
 
                 @Override
-                public String getShortUrl() { return ""; }
+                public String getShortUrl() {
+                    return "";
+                }
             };
 
             CalendarEvent event = mock(CalendarEvent.class);
@@ -896,35 +935,37 @@ public class CalendarEventServiceTest {
 
             lastEvents = getCalendarEventService().getLastEvents(event, 5);
             assertThat(lastEvents, hasSize(4));
-            assertThat(lastEvents.get(0).getBuild(), is((Run)build4));
-            assertThat(lastEvents.get(1).getBuild(), is((Run)build3));
-            assertThat(lastEvents.get(2).getBuild(), is((Run)build2));
-            assertThat(lastEvents.get(3).getBuild(), is((Run)build1));
+            assertThat(lastEvents.get(0).getBuild(), is(build4));
+            assertThat(lastEvents.get(1).getBuild(), is(build3));
+            assertThat(lastEvents.get(2).getBuild(), is(build2));
+            assertThat(lastEvents.get(3).getBuild(), is(build1));
 
             lastEvents = getCalendarEventService().getLastEvents(event, 3);
             assertThat(lastEvents, hasSize(3));
-            assertThat(lastEvents.get(0).getBuild(), is((Run)build4));
-            assertThat(lastEvents.get(1).getBuild(), is((Run)build3));
-            assertThat(lastEvents.get(2).getBuild(), is((Run)build2));
+            assertThat(lastEvents.get(0).getBuild(), is(build4));
+            assertThat(lastEvents.get(1).getBuild(), is(build3));
+            assertThat(lastEvents.get(2).getBuild(), is(build2));
         }
 
         @Issue("JENKINS-52797")
         @Test
-        public void testMatrixProjectWithLastBuilds() throws IOException, ParseException {
-            final MatrixBuild build1 = mockFinishedBuild(MatrixBuild.class,"build1", "2018-01-01 01:00:00 CET", minutes(10), Result.FAILURE);
+        void testMatrixProjectWithLastBuilds() throws ParseException {
+            final MatrixBuild build1 = mockFinishedBuild(MatrixBuild.class, "build1", "2018-01-01 01:00:00 CET", minutes(10), Result.FAILURE);
 
-            final MatrixBuild build2 = mockFinishedBuild(MatrixBuild.class,"build2", "2018-01-01 02:00:00 CET", minutes(10), Result.SUCCESS);
+            final MatrixBuild build2 = mockFinishedBuild(MatrixBuild.class, "build2", "2018-01-01 02:00:00 CET", minutes(10), Result.SUCCESS);
             when(build2.getPreviousBuild()).thenReturn(build1);
 
-            final MatrixBuild build3 = mockFinishedBuild(MatrixBuild.class,"build3", "2018-01-01 03:00:00 CET", minutes(10), Result.ABORTED);
+            final MatrixBuild build3 = mockFinishedBuild(MatrixBuild.class, "build3", "2018-01-01 03:00:00 CET", minutes(10), Result.ABORTED);
             when(build3.getPreviousBuild()).thenReturn(build2);
 
-            final MatrixBuild build4 = mockFinishedBuild(MatrixBuild.class,"build4", "2018-01-01 04:00:00 CET", minutes(10), Result.UNSTABLE);
+            final MatrixBuild build4 = mockFinishedBuild(MatrixBuild.class, "build4", "2018-01-01 04:00:00 CET", minutes(10), Result.UNSTABLE);
             when(build4.getPreviousBuild()).thenReturn(build3);
 
             MatrixProject project = new MatrixProject(mock(ItemGroup.class), "project") {
                 @Override
-                public MatrixBuild getLastBuild() { return build4; }
+                public MatrixBuild getLastBuild() {
+                    return build4;
+                }
 
                 @Override
                 public List<MatrixBuild> getLastBuildsOverThreshold(int numberOfBuilds, Result threshold) {
@@ -933,7 +974,9 @@ public class CalendarEventServiceTest {
                 }
 
                 @Override
-                public String getShortUrl() { return ""; }
+                public String getShortUrl() {
+                    return "";
+                }
             };
 
             CalendarEvent event = mock(CalendarEvent.class);
@@ -943,28 +986,29 @@ public class CalendarEventServiceTest {
 
             lastEvents = getCalendarEventService().getLastEvents(event, 5);
             assertThat(lastEvents, hasSize(4));
-            assertThat(lastEvents.get(0).getBuild(), is((Run)build4));
-            assertThat(lastEvents.get(1).getBuild(), is((Run)build3));
-            assertThat(lastEvents.get(2).getBuild(), is((Run)build2));
-            assertThat(lastEvents.get(3).getBuild(), is((Run)build1));
+            assertThat(lastEvents.get(0).getBuild(), is(build4));
+            assertThat(lastEvents.get(1).getBuild(), is(build3));
+            assertThat(lastEvents.get(2).getBuild(), is(build2));
+            assertThat(lastEvents.get(3).getBuild(), is(build1));
 
             lastEvents = getCalendarEventService().getLastEvents(event, 3);
             assertThat(lastEvents, hasSize(3));
-            assertThat(lastEvents.get(0).getBuild(), is((Run)build4));
-            assertThat(lastEvents.get(1).getBuild(), is((Run)build3));
-            assertThat(lastEvents.get(2).getBuild(), is((Run)build2));
+            assertThat(lastEvents.get(0).getBuild(), is(build4));
+            assertThat(lastEvents.get(1).getBuild(), is(build3));
+            assertThat(lastEvents.get(2).getBuild(), is(build2));
         }
     }
 
-    public static class GetPreviousEventTests {
+    @Nested
+    class GetPreviousEventTests {
         @Test
-        public void testHasNoBuilds() {
+        void testHasNoBuilds() {
             StartedCalendarEvent event = mock(StartedCalendarEvent.class);
             assertThat(getCalendarEventService().getPreviousEvent(event), is(nullValue()));
         }
 
         @Test
-        public void testHasNoPreviousBuild() {
+        void testHasNoPreviousBuild() {
             StartedCalendarEvent event = mock(StartedCalendarEvent.class);
             when(event.getBuild()).thenReturn(mock(Run.class));
 
@@ -972,7 +1016,7 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testHasPreviousBuild() {
+        void testHasPreviousBuild() {
             Run previousBuild = mock(Run.class);
 
             Run build = mock(Run.class);
@@ -988,15 +1032,16 @@ public class CalendarEventServiceTest {
         }
     }
 
-    public static class GetNextEventTests {
+    @Nested
+    class GetNextEventTests {
         @Test
-        public void testHasNoBuilds() {
+        void testHasNoBuilds() {
             StartedCalendarEvent event = mock(StartedCalendarEvent.class);
             assertThat(getCalendarEventService().getNextEvent(event), is(nullValue()));
         }
 
         @Test
-        public void testHasNoPreviousBuild() {
+        void testHasNoPreviousBuild() {
             StartedCalendarEvent event = mock(StartedCalendarEvent.class);
             when(event.getBuild()).thenReturn(mock(Run.class));
 
@@ -1004,7 +1049,7 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testHasPreviousBuild() throws ParseException {
+        void testHasPreviousBuild() throws ParseException {
             Run nextBuild = mock(Run.class);
             when(nextBuild.getStartTimeInMillis()).thenReturn(cal("2018-01-01 00:00:00 CET").getTimeInMillis());
 
@@ -1021,9 +1066,10 @@ public class CalendarEventServiceTest {
         }
     }
 
-    public static class GetNextScheduledEventTests {
+    @Nested
+    class GetNextScheduledEventTests {
         @Test
-        public void testHasNoNextScheduledEvent() {
+        void testHasNoNextScheduledEvent() {
             AbstractProject project = mock(AbstractProject.class, withSettings().extraInterfaces(TopLevelItem.class));
             CalendarEvent event = mock(CalendarEvent.class);
             when(event.getJob()).thenReturn(project);
@@ -1033,8 +1079,8 @@ public class CalendarEventServiceTest {
         }
 
         @Test
-        public void testHasNextScheduledEvent() {
-            FreeStyleProject project = mockScheduledFreeStyleProject("project","0 * * * *", minutes(10));
+        void testHasNextScheduledEvent() {
+            FreeStyleProject project = mockScheduledFreeStyleProject("project", "0 * * * *", minutes(10));
 
             CalendarEvent event = mock(CalendarEvent.class);
             when(event.getJob()).thenReturn(project);
@@ -1044,60 +1090,61 @@ public class CalendarEventServiceTest {
         }
     }
 
-    public static class GetDifferentEventTypeEventsTest {
+    @Nested
+    class GetDifferentEventTypeEventsTest {
 
         @Test
-        public void testAllEvents() throws ParseException {
+        void testAllEvents() throws ParseException {
             Calendar now = cal("2018-01-01 05:00:00 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-02 00:00:00 CET");
 
-            List<FreeStyleProject> projects = asList(
-                mockFinishedFreeStyleProjectWithBuildAndPollingTrigger("#1", "2018-01-01 01:00:00 CET", minutes(30), "0 1-19/6 * * *", "0 4-22/6 * * *")
+            List<FreeStyleProject> projects = List.of(
+                    mockFinishedFreeStyleProjectWithBuildAndPollingTrigger("#1", "2018-01-01 01:00:00 CET", minutes(30), "0 1-19/6 * * *", "0 4-22/6 * * *")
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.ALL);
 
             assertThat(events, hasSize(7));
             assertThat(toStringOf(events), containsInAnyOrder("2018-01-01T01:00:00 - 2018-01-01T01:30:00: #1",
-                "2018-01-01T07:00:00 - 2018-01-01T07:30:00: #1", "2018-01-01T10:00:00 - 2018-01-01T10:30:00: #1",
-                "2018-01-01T13:00:00 - 2018-01-01T13:30:00: #1", "2018-01-01T16:00:00 - 2018-01-01T16:30:00: #1", 
-                "2018-01-01T19:00:00 - 2018-01-01T19:30:00: #1", "2018-01-01T22:00:00 - 2018-01-01T22:30:00: #1"));
+                    "2018-01-01T07:00:00 - 2018-01-01T07:30:00: #1", "2018-01-01T10:00:00 - 2018-01-01T10:30:00: #1",
+                    "2018-01-01T13:00:00 - 2018-01-01T13:30:00: #1", "2018-01-01T16:00:00 - 2018-01-01T16:30:00: #1",
+                    "2018-01-01T19:00:00 - 2018-01-01T19:30:00: #1", "2018-01-01T22:00:00 - 2018-01-01T22:30:00: #1"));
         }
 
         @Test
-        public void testBuildEvents() throws ParseException {
+        void testBuildEvents() throws ParseException {
             Calendar now = cal("2018-01-01 05:00:00 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-02 00:00:00 CET");
 
-            List<FreeStyleProject> projects = asList(
-                mockFinishedFreeStyleProjectWithBuildAndPollingTrigger("#1", "2018-01-01 01:00:00 CET", minutes(30), "0 1-19/6 * * *", "0 4-22/6 * * *")
+            List<FreeStyleProject> projects = List.of(
+                    mockFinishedFreeStyleProjectWithBuildAndPollingTrigger("#1", "2018-01-01 01:00:00 CET", minutes(30), "0 1-19/6 * * *", "0 4-22/6 * * *")
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.BUILDS);
 
             assertThat(events, hasSize(4));
             assertThat(toStringOf(events), containsInAnyOrder("2018-01-01T01:00:00 - 2018-01-01T01:30:00: #1",
-                "2018-01-01T07:00:00 - 2018-01-01T07:30:00: #1", "2018-01-01T13:00:00 - 2018-01-01T13:30:00: #1", 
-                "2018-01-01T19:00:00 - 2018-01-01T19:30:00: #1"));
+                    "2018-01-01T07:00:00 - 2018-01-01T07:30:00: #1", "2018-01-01T13:00:00 - 2018-01-01T13:30:00: #1",
+                    "2018-01-01T19:00:00 - 2018-01-01T19:30:00: #1"));
         }
 
         @Test
-        public void testPollingEvents() throws ParseException {
+        void testPollingEvents() throws ParseException {
             Calendar now = cal("2018-01-01 05:00:00 CET");
             Calendar start = cal("2018-01-01 00:00:00 CET");
             Calendar end = cal("2018-01-02 00:00:00 CET");
 
-            List<FreeStyleProject> projects = asList(
-                mockFinishedFreeStyleProjectWithBuildAndPollingTrigger("#1", "2018-01-01 01:00:00 CET", minutes(30), "0 1-19/6 * * *", "0 4-22/6 * * *")
+            List<FreeStyleProject> projects = List.of(
+                    mockFinishedFreeStyleProjectWithBuildAndPollingTrigger("#1", "2018-01-01 01:00:00 CET", minutes(30), "0 1-19/6 * * *", "0 4-22/6 * * *")
             );
 
             List<CalendarEvent> events = getCalendarEventService(now).getCalendarEvents(projects, range(start, end), CalendarViewEventsType.POLLINGS);
 
             assertThat(events, hasSize(3));
             assertThat(toStringOf(events), containsInAnyOrder("2018-01-01T10:00:00 - 2018-01-01T10:30:00: #1",
-                "2018-01-01T16:00:00 - 2018-01-01T16:30:00: #1", "2018-01-01T22:00:00 - 2018-01-01T22:30:00: #1"));
+                    "2018-01-01T16:00:00 - 2018-01-01T16:30:00: #1", "2018-01-01T22:00:00 - 2018-01-01T22:30:00: #1"));
         }
     }
 }
